src/main/metadata/objects/Training__c.object
<CustomObject>
    <fields>
        <fullName>Have_SalesForce_Knowledge__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Have SalesForce Knowledge?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Training_Amount__c</fullName>
        <label>Training Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Training_Description__c</fullName>
        <label>Training Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Location__c</fullName>
        <label>Training Location</label>
        <picklist>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training_Type__c</fullName>
        <label>Training Type</label>
        <picklist>
            <picklistValues>
                <fullName>Funtional Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Administration Training</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>Training</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Training_Amount_Greater_Than_500</fullName>
        <active>true</active>
        <description>TrainigAmount Should be &gt; 500</description>
        <errorConditionFormula>Training_Amount__c  &lt; 500</errorConditionFormula>
        <errorMessage>Please Enter Training Amount Value Greater Than 500</errorMessage>
    </validationRules>
</CustomObject>